fix(button): fix hover color for dark mode

--- a/src/styles/components/button.styl
+++ b/src/styles/components/button.styl
@@ -60,6 +60,7 @@
     color var(--geist-background)
 
     &:not(.loading):not(.shadow):hover
+      color var(--geist-foreground)
       background var(--geist-background)
       border 1px solid var(--geist-foreground)
 
